# Flovis

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY.md  flovis.spec  pyproject.toml  requirements.txt
docs/screenshots/: README.md
flovis/: __init__.py  app.py
flovis/core/: binaries.py  i18n.py  project.py  settings.py
flovis/core/ai/: __init__.py  ollama_client.py
flovis/core/airfoil/: __init__.py  airfoil.py  naca.py  polar2d.py
flovis/core/geometry/: __init__.py  templates.py
flovis/core/report/: __init__.py  charts.py  pdf_report.py
flovis/core/solvers/: __init__.py  avl.py  panel_method.py  panel_step.py  result.py  vlm.py
flovis/resources/styles/: flovis.qss
flovis/ui/: effects.py  main_window.py  theme.py  windows_mica.py
flovis/ui/tabs/: airfoil_tab.py  analysis_tab.py  model3d_tab.py  report_tab.py  templates_tab.py
flovis/ui/widgets/: airfoil_editor.py  model3d_view.py  mpl_canvas.py
scripts/: build_exe.ps1  strip_ai_attribution.py
scripts/githooks/: commit-msg
tests/: test_airfoil.py  test_airfoil_edit.py  test_control_surfaces.py  test_panel.py  test_polar2d.py  test_project_report.py  test_solvers.py  test_step.py  test_step_orientation.py
